Add quickTest gradle task